# voxey

./: .gitignore  CMakeLists.txt  README.md
assets/grassBlock/: GrassBlockAtlasTexture.aseprite  grassBlockFrontFace.aseprite
shaders/: fragmentShader.frag  vertexShader.vert
src/: main.cpp
src/core/: application.cpp  application.h  engine.cpp  engine.h  logger.cpp  logger.h  main.cpp  updateManager.cpp  updateManager.h
src/debug/: fps.cpp  fps.h
src/input/: input.cpp  input.h  inputManager.cpp  inputManager.h
src/physics/: physics.cpp  physics.h  physicsEngine.cpp
src/rendering/: block.cpp  block.h  camera.cpp  camera.h  chunk.cpp  chunk.h  chunkManager.cpp  chunkManager.h  renderer.cpp  renderer.h  renderingEngine.cpp  renderingEngine.h  shaderManager.cpp  shaderManager.h
src/utils/: fileManager.cpp  fileManager.h  graphicsManager.cpp  graphicsManager.h  shaderManager.cpp  shaderManager.h  textureLoader.cpp  textureLoader.h  time.cpp  time.h  windowManager.cpp  windowManager.h
src/voxel/: block.cpp  block.h  chunk.cpp  chunk.h  chunkManager.cpp  chunkManager.h
